Correction responsive de l'ensemble des pages

--- a/album.html
+++ b/album.html
@@ -59,51 +59,65 @@
             </nav>
         </header>
         <main class="container">
-            <section class="card-deck">
-                <div class="row mb-4">
-                    <div class="card border-success shadow">
-                        <img src="pictures/album/album_1.jpg" alt="Photo d'un ours en peluche, posé assis sur l'herbe." class="card-img-top">
-                    </div>
-                    <div class="card border-success shadow">
-                        <img src="pictures/album/album_2.jpg" alt="Photo d'un ours en peluche, posé assis dehors sur le sol." class="card-img-top">
-                    </div>
-                    <div class="card border-success shadow">
-                        <img src="pictures/album/album_3.jpg" alt="Photo d'un ours en peluche, posé allongé sur l'herbe." class="card-img-top">
-                    </div>
-                </div>
-                <div class="row mb-4">
-                    <div class="card border-success shadow">
-                        <img src="pictures/album/album_4.jpg" alt="Photo d'un ours en peluche, posé assis dehors sur le sol." class="card-img-top">
-                    </div>
-                    <div class="card border-success shadow">
-                        <img src="pictures/album/album_5.jpg" alt="Photo d'un ours en peluche, posé assis sur l'herbe." class="card-img-top">
-                    </div>
-                    <div class="card border-success shadow">
-                        <img src="pictures/album/album_6.jpg" alt="Photo d'un ours en peluche, posé assis dehors sur le sol, avec des coeurs en peluche." class="card-img-top">
-                    </div>
-                </div>
-                <div class="row mb-4">
-                    <div class="card border-success shadow">
-                        <img src="pictures/album/album_7.jpg" alt="Photo d'un ours en peluche, posé assis dehors sur le sol." class="card-img-top">
-                    </div>
-                    <div class="card border-success shadow">
-                        <img src="pictures/album/album_8.jpg" alt="Photo d'un ours en peluche, posé assis dehors sur du bois." class="card-img-top">
-                    </div>
-                    <div class="card border-success shadow">
-                        <img src="pictures/album/album_9.jpg" alt="Photo d'un ours en peluche, posé assis sur le sol." class="card-img-top">
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="card border-success shadow">
-                        <img src="pictures/album/album_10.jpg" alt="Photo d'un ours en peluche, posé assis sur le sol, avec des cadeaux." class="card-img-top">
-                    </div>
-                    <div class="card border-success shadow">
-                        <img src="pictures/album/album_11.jpg" alt="Photo d'un ours en peluche, posé assis sur le sol." class="card-img-top">
-                    </div>
-                </div>
-            </section>
+            <div class="row">
+                <section class="card-deck card-size col-lg-4">
+                        <div class="card border-success shadow mb-4">
+                            <img src="pictures/album/album_1.jpg" alt="Photo d'un ours en peluche, posé assis sur l'herbe." class="card-img-top">
+                        </div>
+                </section>
+                <section class="card-deck card-size col-lg-4">
+                        <div class="card border-success shadow mb-4">
+                            <img src="pictures/album/album_2.jpg" alt="Photo d'un ours en peluche, posé assis dehors sur le sol." class="card-img-top">
+                        </div>
+                </section>
+                <section class="card-deck card-size col-lg-4">
+                        <div class="card border-success shadow mb-4">
+                            <img src="pictures/album/album_3.jpg" alt="Photo d'un ours en peluche, posé allongé sur l'herbe." class="card-img-top">
+                        </div>
+                </section>
+                <section class="card-deck card-size col-lg-4">
+                        <div class="card border-success shadow mb-4">
+                            <img src="pictures/album/album_4.jpg" alt="Photo d'un ours en peluche, posé assis dehors sur le sol." class="card-img-top">
+                        </div>
+                </section>
+                <section class="card-deck card-size col-lg-4">
+                        <div class="card border-success shadow mb-4">
+                            <img src="pictures/album/album_5.jpg" alt="Photo d'un ours en peluche, posé assis sur l'herbe." class="card-img-top">
+                        </div>
+                </section>
+                <section class="card-deck card-size col-lg-4">
+                        <div class="card border-success shadow mb-4">
+                            <img src="pictures/album/album_6.jpg" alt="Photo d'un ours en peluche, posé assis dehors sur le sol, avec des coeurs en peluche." class="card-img-top">
+                        </div>
+                </section>
+                <section class="card-deck card-size col-lg-4">
+                        <div class="card border-success shadow mb-4">
+                            <img src="pictures/album/album_7.jpg" alt="Photo d'un ours en peluche, posé assis dehors sur le sol." class="card-img-top">
+                        </div>
+                </section>
+                <section class="card-deck card-size col-lg-4">
+                        <div class="card border-success shadow mb-4">
+                            <img src="pictures/album/album_8.jpg" alt="Photo d'un ours en peluche, posé assis dehors sur du bois." class="card-img-top">
+                        </div>
+                </section>
+                <section class="card-deck card-size col-lg-4">
+                        <div class="card border-success shadow mb-4">
+                            <img src="pictures/album/album_9.jpg" alt="Photo d'un ours en peluche, posé assis sur le sol." class="card-img-top">
+                        </div>
+                </section>
+                <section class="card-deck card-size col-lg-4">
+                        <div class="card border-success shadow mb-4">
+                            <img src="pictures/album/album_10.jpg" alt="Photo d'un ours en peluche, posé assis sur le sol, avec des cadeaux." class="card-img-top">
+                        </div>
+                </section>
+                <section class="card-deck card-size col-lg-4">
+                        <div class="card border-success shadow mb-4">
+                            <img src="pictures/album/album_11.jpg" alt="Photo d'un ours en peluche, posé assis sur le sol." class="card-img-top">
+                        </div>
+                </section>
+            </div>
         </main>
-        <footer class="container mt-5">
+        <footer class="container">
             <nav class="row navbar navbar-expand-lg navbar-light bg-light my-4 py-3">
                 <div class="col">
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent">
