--- a/product.html
+++ b/product.html
@@ -61,10 +61,10 @@
         <main class="container">
             <section class="row">
                 <!--Intégration des différents éléments en JS (image, nom, description, ...)-->
-                <div class="col">
+                <div class="col-lg-6 mb-md-4">
                     <img src='' alt="Photo ours en peluche" id="picture" class="w-75 d-block mx-auto border border-success shadow">
                 </div>
-                <div class="col">
+                <div class="col-lg-6 text-center">
                     <h2 id="name"></h2>
                     <p id="description"></p>
                     <label>Choix de la couleur :
