--- a/product_information.html
+++ b/product_information.html
@@ -59,26 +59,32 @@
             </nav>
         </header>
         <main class="container">
-            <div class="row card-deck">
-                <section class="card border-success shadow mb-2">
-                    <img src="pictures/card/card_1.jpg" alt="Photo d'un ours en peluche, posé assis dehors sur le sol." class="card-img-top">
-                    <div class="card-body">
-                        <h5 class="card-title">Qualité</h5>
-                        <p class="card-text">Chaque ours en peluche est d'une qualité sans pareil.</p>
+            <div class="row">
+                <section class="card-deck card-size col-lg-4">
+                    <div class="card border-success shadow mb-4 mb-lg-0">
+                        <img src="pictures/card/card_1.jpg" alt="Photo d'un ours en peluche, posé assis dehors sur le sol." class="card-img-top">
+                        <div class="card-body text-center">
+                            <h5 class="card-title">Qualité</h5>
+                            <p class="card-text">Chaque ours en peluche est d'une qualité sans pareil.</p>
+                        </div>
                     </div>
                 </section>
-                <section class="card border-success shadow mb-2">
-                    <img src="pictures/card/card_2.jpg" alt="Photo d'un ours en peluche, posé assis dehors sur une planche en hauteur." class="card-img-top">
-                    <div class="card-body">
-                        <h5 class="card-title">Made in France</h5>
-                        <p class="card-text">Des matières premières, jusqu'à la chaîne de production, tout se passe en France.</p>
+                <section class="card-deck card-size col-lg-4">
+                    <div class="card border-success shadow mb-4 mb-lg-0">
+                        <img src="pictures/card/card_2.jpg" alt="Photo d'un ours en peluche, posé assis dehors sur une planche en hauteur." class="card-img-top">
+                        <div class="card-body text-center">
+                            <h5 class="card-title">Made in France</h5>
+                            <p class="card-text">Des matières premières, jusqu'à la chaîne de production, tout se passe en France.</p>
+                        </div>
                     </div>
                 </section>
-                <section class="card border-success shadow mb-2">
-                    <img src="pictures/card/card_3.jpg" alt="Photo d'un ours en peluche posé assis sur l'herbe." class="card-img-top">
-                    <div class="card-body">
-                        <h5 class="card-title">Respectueux de l'environnement.</h5>
-                        <p class="card-text">La conception de nos ours en peluche respecte l'environnement.</p>
+                <section class="card-deck card-size col-lg-4">
+                    <div class="card border-success shadow mb-lg-0">
+                        <img src="pictures/card/card_3.jpg" alt="Photo d'un ours en peluche posé assis sur l'herbe." class="card-img-top">
+                        <div class="card-body text-center">
+                            <h5 class="card-title">Respectueux de l'environnement.</h5>
+                            <p class="card-text">La conception de nos ours en peluche respecte l'environnement.</p>
+                        </div>
                     </div>
                 </section>
             </div>
